[package]
name = "runtime-macros"
version = "0.3.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simulate expansion of procedural macros at run time"
keywords = ["macro", "code-coverage", "proc_macro", "testing"]
repository = "https://github.com/jeremydavis519/runtime-macros"
categories = ["development-tools"]
readme = "README.md"
include = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]
edition = "2018"

[badges]
travis-ci = { repository = "jeremydavis519/runtime-macros", branch = "master" }
coveralls = { repository = "jeremydavis519/runtime-macros", branch = "master", service = "github" }

[lib]
crate-type = ["lib"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.11", default-features = false, features = ["derive", "parsing", "full", "visit", "extra-traits"] }

[dev-dependencies]
cargo-tarpaulin = "0.10.2"

