[package]
name = "runtime-macros"
version = "0.3.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simulate expansion of procedural macros at run time"
keywords = ["macro", "code-coverage", "proc_macro", "testing"]
repository = "https://github.com/jeremydavis519/runtime-macros"
categories = ["development-tools"]
readme = "README.md"
include = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[badges]
travis-ci = { repository = "jeremydavis519/runtime-macros", branch = "master" }
coveralls = { repository = "jeremydavis519/runtime-macros", branch = "master", service = "github" }

[lib]
crate-type = ["lib"]

[dependencies]
proc-macro2 = "0.4"
syn = { version = "0.15", default-features = false, features = ["parsing", "full", "visit", "extra-traits"] }

[dev-dependencies]
cargo-tarpaulin = "0.21"
