[package]
name = "runtime-macros"
version = "1.0.1"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simulate expansion of procedural macros at run time"
keywords = ["macro", "code-coverage", "proc_macro", "testing"]
repository = "https://github.com/jeremydavis519/runtime-macros"
categories = ["development-tools"]
readme = "README.md"
include = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[lib]
crate-type = ["lib"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", default-features = false, features = ["parsing", "visit", "extra-traits"] }

[dev-dependencies]
cargo-tarpaulin = "0.21"
