[package]
name = "custom_assert"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"

[dependencies.syn]
version = "0.15"
default-features = false
features = ["parsing", "printing", "full"]

[dev-dependencies]
runtime-macros = { path = "../.." }
