[package]
name = "reference_counting"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0.38"
default-features = false
features = ["parsing", "printing", "full", "clone-impls"]

[dev-dependencies]
runtime-macros = { path = "../.." }
